Closed Bug 1860801 Opened 1 year ago Closed 1 year ago

With the no-readback webgpu enabled, crash if you close a webgpu demo in the background tab

Categories

(Core :: Graphics: WebGPU, defect, P2)

defect

Tracking

()

VERIFIED FIXED
121 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox119 --- unaffected
firefox120 --- unaffected
firefox121 --- verified

People

(Reporter: mayankleoboy1, Assigned: sotaro)

References

(Regression, )

Details

(Keywords: regression)

Crash Data

Attachments

(3 files)

Use latest nightly which has the patches for bug 1856787
Set dom.webgpu.swap-chain.external-texture-dx12=True . Restart the browser
Go to bug https://bugzilla.mozilla.org/show_bug.cgi?id=1850206
Open the linked webgpu demo in a new tab
Switch to the new tab and keep that tab open for a few seconds . Let the demo run.
Go back to the previous tab and close the demo tab (middle click on the demo tab or right click->Close tab)

AR: Browser flashes
ER: not so?

I get crashes liek this : https://crash-stats.mozilla.org/report/index/26abcc9e-fcc9-43d9-9071-36d7e0231024

Crash Signature: [@ winapi::um::unknwnbase::IUnknown::Release ]

This is technically not a regression as the no-readback thingy is not fully developed yet. But marking as regression just for tracking. Feel free to track otherwise.

Keywords: regression
Regressed by: 1856787
Flags: needinfo?(sotaro.ikeda.g)
Summary: With the no-readback webgpu enabled, crash of you close a webgpu demo in the background tab → With the no-readback webgpu enabled, crash if you close a webgpu demo in the background tab
Attached file about:support

Similarish crash also occurs if you tear the demo tab.

Thank you for the report. I take the bug.

Assignee: nobody → sotaro.ikeda.g
Flags: needinfo?(sotaro.ikeda.g)

Set release status flags based on info from the regressing bug 1856787

Blocks: webgpu-v1
Severity: -- → S2
Priority: -- → P2

Another aspect of this is that playing GIFs in teh current tab will stop running if this crash occurs.

STR:

  1. Go to https://github.com/kishimisu/WebGPU-Fluid-Simulation
  2. Scroll down a bit to the readme. There is a beautiful GIF of the demo.
  3. Now open the actual demo (https://kishimisu.github.io/WebGPU-Fluid-Simulation/) in a new tab and switch to it for 5 seconds
  4. Switch back to the github tab with the GIF, and close the demo tab by middle-clicking it by mouse.

AR: The GIF stops playing, may turn white. But it wont recover and start playing normally. Other "moving" things like youtube videos or CSS animations recover almost immediately.

Let me know if you prefer a new bug for this.

Crash occurred when TextureRaw's d3d12::Resource was destroyed after gpu_server_delete().

Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d8fc46c3e9e1 Remove caching d3d12::Resource in TextureRaw r=lsalzman
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch

Fixed on the latest Nightly. Thanks!

Flags: qe-verify+

I've reproduced this issue in Nightly 121.0a1 (2023-10-24) on Windows10 x64 following the STR from Comment 0.
Verified as fixed in the latest Firefox 121.0b7 version on Windows10 x64, Ubuntu 22.04 and macOS 13 where the issue no longer persists.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: