Bug 1860801 - Remove caching d3d12::Resource in TextureRaw r=lsalzman

Delete d3d12::Resource caching for now because it crashes when d3d12::Resource is deleted after wgpu_server_delete().

Differential Revision: https://phabricator.services.mozilla.com/D192953