dom/webgpu/ExternalTexture.h
@@ -39,16 +39,9 @@ class ExternalTexture {
 
   gfx::IntSize GetSize() { return gfx::IntSize(mWidth, mHeight); }
 
-  void SetTextureRaw(ffi::WGPUTextureRaw* aTextureRaw);
-  ffi::WGPUTextureRaw* GetTextureRaw() { return mTextureRaw; }
-
   const uint32_t mWidth;
   const uint32_t mHeight;
   const struct ffi::WGPUTextureFormat mFormat;
-
- protected:
-  // Holds the raw object that could be used for creating wgpu Texture.
-  ffi::WGPUTextureRaw* mTextureRaw = nullptr;
 };
 
 }  // namespace webgpu
